--- a/uv-phoenix/.env.sample
+++ b/uv-phoenix/.env.sample
@@ -1,3 +1,3 @@
-OPENAI_API_KEY=
+OPENAI_API_KEY="YOUR_OPENAI_API_KEY"
 COLLECTOR_ENDPOINT="http://phoenix:6006/v1/traces"
-PROD_CORS_ORIGIN="http://localhost:3000"
+PROD_CORS_ORIGIN="http://phoenix:3000"
